user 통합 테스트 추가